api-get/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-get
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-get
  template:
    metadata:
      labels:
        app: api-get
    spec:
      containers:
      - name: api-get
        image: myregistry.azurecr.io/api-get-app:1.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: api-get-service
spec:
  selector:
    app: api-get
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
