api-get/policy-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-api-get-to-api-btc
spec:
  podSelector:
    matchLabels:
      app: api-get
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api-btc
